# LicensePlate-OpenCV-MultiLang

./: .gitignore  LicensePlateHaarCascade-FlowDiagram.mmd  README.md  requirements.txt
HaarCascade/: readme.md
HaarCascade/data_analisys/rus_plate/: report001.ipynb
HaarCascade/data_analisys/rus_plate_16stages/: report002.ipynb
cppHaarCascadeLPD/HaarCascade/: CMakeLists.txt  LicensePlateHaarCascade.cpp
cppHaarCascadeLPD/HaarCascade/benchmark/csvs/haarcascade_license_plate_rus_16stages/: results_16STAGES_52150.csv  results_16STAGES_78691.csv
cppHaarCascadeLPD/HaarCascade/benchmark/csvs/haarcascade_russian_plate_number/: results_94735.csv  results_RUS_39957.csv  results_RUS_54595.csv  results_RUS_91484.csv
cppHaarCascadeLPD/HaarCascade/data_analisys/rus_plate/: report001.ipynb
cppHaarCascadeLPD/HaarCascade/data_analisys/rus_plate/csvs/: results_62937.csv
cppHaarCascadeLPD/HaarCascade/data_analisys/rus_plate_16stages/: report001.ipynb
cppHaarCascadeLPD/HaarCascade/data_analisys/rus_plate_16stages/csvs/: results_15821.csv  results_76161.csv
dataAnalisys/: LiscensePlateDA.ipynb
dataAnalisys/csvs_cpp/results/: results_16STAGES_98903.csv  results_RUS_85405.csv
dataAnalisys/csvs_java/results/: results_16STAGES_44044.csv
dataAnalisys/csvs_py/results/: results_16STAGES_84700.csv  results_16STAGES_98954.csv
javaHaarCascadeLPD/: .gitignore
javaHaarCascadeLPD/src/: BenchMarkPlates.java
pyHaarCascadeLPD/: .gitignore  requirements.txt
pyHaarCascadeLPD/HaarCascade/: LicensePlateHaarCascade.py
pyHaarCascadeLPD/HaarCascade/benchmark/images/: readme.md
(+29 files in other folders)
